--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Package and Release
 on:
   push:
     tags:
-      - 'v*' # Utløses bare når du pusher en "Tag" som starter på "v" (f.eks. v1.0.0)
+      - 'v*'
 
 jobs:
   release:
@@ -12,9 +12,12 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Nødvendig for å hente alle tags
+          fetch-depth: 0
 
       - name: Package and upload
         uses: BigWigsMods/packager@v2
         with:
-          args: -w ${{ secrets.WAGO_API_TOKEN }}
+          args: -d ElvUI_thingsUI
+        env:
+          WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
